[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://source/menus/subMenus/SoundMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/menus/subMenus/HotkeyMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/menus/subMenus/VideoMenu.tscn" type="PackedScene" id=4]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SubMenus" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VideoMenu" parent="SubMenus" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SoundMenu" parent="SubMenus" instance=ExtResource( 2 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HotkeyMenu" parent="SubMenus" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BackToMainMenuButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -177.998
margin_top = -58.0
text = "Back to menu"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
